# task1

./: .gitignore  .gitmodules  README.md
client/: Annotation.qml  CMakeLists.txt  CMakeLists.txt.user.48408e2  Channel.qml  Colors.cpp  Colors.h  MainPocket.cpp  MainPocket.hpp  app.cpp  app.h  appwindow.cpp  appwindow.h  main.cpp  qml.qrc
